--- a/res/templates/view-top.tmpl
+++ b/res/templates/view-top.tmpl
@@ -1,11 +1,11 @@
 <table style="font-family: Arial; font-size: larger; font-style: italic; width: 100%; border: 0; padding: 0; font-weight: bold;">
 <tr style="text-align: center; justify-self: center;">
-    <td style="text-align: left; color: gray;">current:&nbsp;</td>
+    <td style="text-align: left; color: gray;">System:&nbsp;</td>
   {{ if eq .NextSystem "" }}
     <td style="text-align: left; color: white;">
         {{ .PrevSystem }}
     </td>
-    <td style="width: 50%;">
+    <td style="width: 50%; text-align: left;">
         <span style="text-align: left; color: {{ .PrevStar.Color }}; font-weight: bold; width: 10%; font-size: 120%;">{{ .PrevStar.Type }}</span>
     </td>
   {{ else }}
@@ -24,7 +24,7 @@
     <td style="text-align: right; color: white; width: 35%;">
         {{ .NextSystem }}
     </td>
-    <td style="text-align: right; color: gray;">&nbsp;:next</td>
+    <td style="text-align: right; color: gray;">&nbsp;:Next</td>
   {{ end }}
 </tr>
 </table>
