bio fixes, more criterias

--- a/res/templates/view-system.tmpl
+++ b/res/templates/view-system.tmpl
@@ -46,7 +46,7 @@
            {{ else }}
                <td><span style="color: gray;">no</span></td>
            {{ end }}
-           <td>{{ $v.DistanceLs }}</td>
+           <td><span style="font-size: smaller;">{{ $v.DistanceLs }}</span></td>
            <td>{{ $v.RadiusS }}</td>
            <td>{{ $v.MassS }}</td>
            <td><span style="color: {{ $v.TemperatureColor }};">{{ $v.TemperatureK }}</span></td>
