--- a/res/templates/view-signals.tmpl
+++ b/res/templates/view-signals.tmpl
@@ -5,9 +5,9 @@
 
 <thead>
     <tr>
-        <th style="text-align: right; width: 10%;">What/Where</th>
-        <th style="text-align: center; width: 20%;">Signal&nbsp;Type</th>
-        <th style="text-align: left;">Description</th>
+        <th style="width: 15%;">What/Where</th>
+        <th style="width: 15%;">Signal&nbsp;Type</th>
+        <th>Description</th>
     </tr>
 </thead>
 
