--- a/res/templates/view-bodies.tmpl
+++ b/res/templates/view-bodies.tmpl
@@ -8,31 +8,8 @@
     {{ end }}
 {{ end }}
 
-<caption><div>
-    {{ if not $nots }}
-        <!-- <span style="color: white; background-color: gray; font-size: larger;">Notable Objects</span> -->
-    {{ else }}
-        <span style="border: solid 1px gray; border-radius: 6px; color: black; background-color: yellow;">Notable Objects&nbsp;<span class="char-in-circle">&crarr;</span></span>
-        <table class="hint-table">
-            <thead>
-                <tr>
-                    <th>BodyName</th>
-                    <th>Notes</th>
-                </tr>
-            <thead>
-            <tbody>
-            {{ range $i, $v := . }}
-                {{ if ($v.Notes) | and (ne $v.Notes "") }}
-                <tr>
-                    <td id="text-right"><b>{{ $v.NotesName }}</b></td>
-                    <td id="text-left"><i>{{ $v.Notes }}</i></td>
-                </tr>
-                {{ end }}
-            {{ end }}
-            </tbody>
-        </table>
-    {{ end }}
-</div></caption>
+<caption>
+</caption>
 
 <thead>
     <tr>
@@ -46,7 +23,7 @@
         <th>Grav(G)</th>
         <th>Rs(N/R)</th>
         <th>Atmo</th>
-        <th>BGGHO</th>
+        <th>bgGHO</th>
     </tr>
 </thead>
 
