--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -96,7 +96,7 @@ body {
     display: block;
 }
 
-#view-system {
+#view-stars {
     display: none;
 }
 
@@ -117,7 +117,7 @@ body {
     height: 100vh;
     display: inline-grid;
     grid-template-columns: 100%;
-    grid-template-rows: 25% 25% 25% 25%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
     background-color: rgba(0, 0, 0, 0.5);
     /*backdrop-filter: blur(3px);*/
 }
@@ -181,13 +181,16 @@ body {
 #button-log {
 }
 
-#button-system {
+#button-stars {
 }
 
 #button-bodies {
 }
 
 #button-signals {
+}
+
+#button-notes {
 }
 
 .stars-table {
@@ -292,11 +295,12 @@ body {
 .signals-table th {
     font-style: italic;
     color: gray;
-    text-align: left;
+    text-align: center;
 }
 
 .signals-table td {
-    padding: 1px;
+    padding-left: 10px;
+    padding-right: 10px;
     font-size: larger;
     text-align: left;
     border: solid 1px black;
@@ -304,6 +308,32 @@ body {
     font-family: 'Courier New', monospace;
     /*background-color: rgba(250, 250, 250, 0.15);*/
 }
+
+.notes-table {
+    color: white;
+    border: none;
+    width: 100%;
+    /*table-layout: fixed;*/
+    overflow-wrap: break-word;
+}
+
+.notes-table th {
+    font-style: italic;
+    color: gray;
+    text-align: center;
+}
+
+.notes-table td {
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: larger;
+    text-align: left;
+    border: solid 1px black;
+    border-radius: 6px;
+    font-family: 'Courier New', monospace;
+    /*background-color: rgba(250, 250, 250, 0.15);*/
+}
+
 
 /*
 .signals-table tbody {
