--- a/res/templates/view-notes.tmpl
+++ b/res/templates/view-notes.tmpl
@@ -19,7 +19,7 @@
     <tr class="even">
     {{ end }}
     {{ $odd = not $odd }}
-        <td style="text-align: right; font-weight: bold;">{{ $v.Body }}</td>
+        <td style="text-align: right; color: gray; font-style: italic;">{{ $v.Body }}</td>
         <td style="text-align: left;">{{ $v.Notes }}</td>
     </tr>
 {{ end }}
