--- a/res/templates/view-top.tmpl
+++ b/res/templates/view-top.tmpl
@@ -5,8 +5,8 @@
     <td style="text-align: left; color: white;">
         {{ .PrevSystem }}
     </td>
-    <td style="width: 50%; text-align: left;">
-        <span style="text-align: left; color: {{ .PrevStar.Color }}; font-weight: bold; width: 10%; font-size: 120%;">{{ .PrevStar.Type }}</span>
+    <td style="text-align: left; color: {{ .PrevStar.Color }}; font-weight: bold; width: 60%; font-size: 120%;">
+        {{ .PrevStar.Type }}
     </td>
   {{ else }}
     <td style="text-align: left; color: white; width: 35%;">
