--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -306,7 +306,7 @@ body {
 .notes-table td {
     padding-left: 5px;
     padding-right: 5px;
-    font-size: larger;
+    /*font-size: larger;*/
     text-align: left;
     border: solid 1px black;
     border-radius: 6px;
